syntax = "proto3";

option go_package = "../../out/server;server";

package server.s_msg;

import "s_enum.proto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
  server.s_msg.MyEnum enum = 2;
}

message HelloResponse {
  string message = 1;
  server.s_msg.MyEnum enum = 2;
}